# emotionLib

./: .env  .gitignore  Cargo.toml  shell.nix
db/: emotion1.db  test.db
doc/: architecture.md  auth.md
emotion_lib_derive/: Cargo.toml
emotion_lib_derive/src/: lib.rs
migrations/: 20230123163655_init.down.sql  20230123163655_init.up.sql  20230720103252_auth.down.sql  20230720103252_auth.up.sql  20250705143654_dosb2025.down.sql  20250705143654_dosb2025.up.sql  20250705143659_bjs2025.down.sql  20250705143659_bjs2025.up.sql  20250705143708_merged.down.sql  20250705143708_merged.up.sql
src/: bjs_eval.rs  dosb_eval.rs  http_res.rs  lib.rs  model.rs  schema.rs
src/auth/: http_res.rs  mod.rs
src/manage/: mod.rs  schema.rs
src/search/: getBestTrys.sql  mod.rs  search_schema.rs  selectVersucheOfStudents.sql
testData/: 2025bjs.db  2025dosb.db  gym_event.json
vorlagen/2023/: 1.json  init.json
vorlagen/2024/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  init.json  todo.txt
