[package]
name = "emotionLib"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "chrono", "uuid", "sqlite"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
actix-rt = "2.8.0"
futures = "0.3.28"
log = "0.4.19"
time-test = "0.2.3"
actix-web = "4.5.1"
walkdir = "2.5.0"